
opam-version: "2.0"
version: "0.4.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/migemocaml"
bug-reports: "https://github.com/derui/migemocaml"
dev-repo: "git+https://github.com/derui/migemocaml"
synopsis: "Private library for Migemocaml"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "2.0.0"}
  "logs" { < "0.8.0" & >= "0.7.0"}
  "menhir" {build}
  "alcotest" {with-test & < "2.0.0"}
  "astring" { < "0.9.0" & >= "0.8.0" }
]
available: ["ocaml" >= "4.05.0"]
description: """
!!DO NOT USE THIS LIBRARY!!

Private library for Migemocaml.
"""
url {
  src: "https://github.com/derui/migemocaml/archive/0.4.0.tar.gz"
  checksum: "md5=d41d8cd98f00b204e9800998ecf8427"
}
