
opam-version: "2.0"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/migemocaml"
bug-reports: "https://github.com/derui/migemocaml"
dev-repo: "git+https://github.com/derui/migemocaml"
tags: []
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name] {test}
]
depends: [
  "jbuilder" {build & >= "1.0+beta16"}
  "menhir" {build}
  "oUnit" {test}
]
available: ["ocaml" >= "4.05.0"]
